# Trip_Agent

./: .gitignore  README.md  apiset.py  database.py  debug_ddg.py  main.py  prompts.py  pyproject.toml  schemas.py  travel_agent.py
static/: index.html  style.css
